Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
None
-
None
Description
With GCC 8 and 9:
In file included from /home/szaszm/nifi-minifi-cpp/libminifi/test/unit/../Catch.h:21,
from /home/szaszm/nifi-minifi-cpp/libminifi/test/unit/RelationshipTests.cpp:20:
/home/szaszm/nifi-minifi-cpp/libminifi/test/unit/RelationshipTests.cpp: In function ‘void ____C_A_T_C_H____T_E_S_T____0()’:
/home/szaszm/nifi-minifi-cpp/libminifi/test/unit/RelationshipTests.cpp:31:23: error: no match for ‘operator!=’ (operand types are ‘const org::apache::nifi::minifi::core::Relationship’ and ‘const org::apache::nifi::minifi::core::Relationship’)
REQUIRE(!(undefined != undefined));
~~~~~~~~~^~~~~~~~~~~
Caused by a change in MINIFICPP-1634. It was not caught by the CI because the error is in a test, and we build on debian with -DSKIP_TESTS=ON.
Attachments
Issue Links
- is caused by
-
MINIFICPP-1634 Remove namespace aliases from Core.h
- Resolved