MINIFICPP-1679 revert Relationship operator!= Because on GCC < 10, consistent comparison is not supported yet. :(

This closes #1209
Signed-off-by: Martin Zink <martinzink@apache.org>